callgrind-utils/tests/snapshots/python_fractal_callgraph__fractal_py_full_folded.snap
---
source: tests/python_fractal_callgraph.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
py::run_measured <cost>
py::run_measured;py::complex_fractal_benchmark <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.__init__ <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.__init__;py::NodeMetadata.__init__ <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.__init__;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode._compute_child_value <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode._compute_child_value;math_sin <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.build_fractal'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.compute_tree_hash <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2;py::FractalNode.compute_tree_hash'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;py::FractalNode.compute_tree_hash;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.build_fractal'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.compute_tree_hash <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2;py::FractalNode.compute_tree_hash'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.build_fractal;py::FractalNode.compute_tree_hash;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.compute_tree_hash <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2;py::FractalNode.compute_tree_hash'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.compute_tree_hash;py::FractalNode.compute_tree_hash'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::FractalNode.compute_tree_hash;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.collect_leaves <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.collect_leaves;py::FractalNode.collect_leaves'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.collect_leaves;py::FractalNode.collect_leaves'2;py::FractalNode.collect_leaves'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.count_nodes <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2;py::FractalNode.count_nodes.<locals>.<genexpr>'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2;py::FractalNode.count_nodes.<locals>.<genexpr>'2;py::FractalNode.count_nodes'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.max_path_sum <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr>;py::FractalNode.max_path_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr>;py::FractalNode.max_path_sum'2;py::FractalNode.max_path_sum.<locals>.<genexpr>'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr>;py::FractalNode.max_path_sum'2;py::FractalNode.max_path_sum.<locals>.<genexpr>'2;py::FractalNode.max_path_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.recursive_sum <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2;py::FractalNode.recursive_sum.<locals>.<genexpr>'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2;py::FractalNode.recursive_sum.<locals>.<genexpr>'2;py::FractalNode.recursive_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.collect_leaves <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.collect_leaves;py::FractalNode.collect_leaves'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.collect_leaves;py::FractalNode.collect_leaves'2;py::FractalNode.collect_leaves'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.count_nodes <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2;py::FractalNode.count_nodes.<locals>.<genexpr>'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2;py::FractalNode.count_nodes.<locals>.<genexpr>'2;py::FractalNode.count_nodes'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.count_nodes;py::FractalNode.count_nodes.<locals>.<genexpr>;py::FractalNode.count_nodes'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.max_path_sum <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr>;py::FractalNode.max_path_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr>;py::FractalNode.max_path_sum'2;py::FractalNode.max_path_sum.<locals>.<genexpr>'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.max_path_sum;py::FractalNode.max_path_sum.<locals>.<genexpr>;py::FractalNode.max_path_sum'2;py::FractalNode.max_path_sum.<locals>.<genexpr>'2;py::FractalNode.max_path_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.recursive_sum <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2;py::FractalNode.recursive_sum.<locals>.<genexpr>'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2;py::FractalNode.recursive_sum.<locals>.<genexpr>'2;py::FractalNode.recursive_sum'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::FractalNode.recursive_sum;py::FractalNode.recursive_sum.<locals>.<genexpr>;py::FractalNode.recursive_sum'2;__tls_get_addr <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::analyze_fractal_tree'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::compute_variance <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::compute_variance;py::compute_variance.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::compute_variance;py::compute_variance.<locals>.<genexpr>;pow@@GLIBC_2.29 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::analyze_fractal_tree'2;py::compute_variance;py::compute_variance.<locals>.<genexpr>;pow@@GLIBC_2.29;__ieee754_pow_fma <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::compute_variance <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::compute_variance;py::compute_variance.<locals>.<genexpr> <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::compute_variance;py::compute_variance.<locals>.<genexpr>;pow@@GLIBC_2.29 <cost>
py::run_measured;py::complex_fractal_benchmark;py::analyze_fractal_tree;py::compute_variance;py::compute_variance.<locals>.<genexpr>;pow@@GLIBC_2.29;__ieee754_pow_fma <cost>
py::run_measured;py::complex_fractal_benchmark;py::fibonacci_memo <cost>
py::run_measured;py::complex_fractal_benchmark;py::fibonacci_memo;py::fibonacci_memo'2 <cost>
py::run_measured;py::complex_fractal_benchmark;py::fibonacci_memo;py::fibonacci_memo'2;py::fibonacci_memo'2 <cost>
py::run_measured;py::complex_fractal_benchmark;__tls_get_addr <cost>
